Resolves: tdf#116216 array sort order of error values in LOOKUP and MATCH

Change-Id: I424de514b3a3729bc5f619814b6a4aab42569f82